--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.datadreaming.org/"
+baseurl = "https://yangxiaohan0120.github.io/"
 title = "Andrew Zieffler"
 theme = "hugo-theme-cleanwhite"
 languageCode = "en-us"
