--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ ga_domain: yangxiaohan0120.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "杨晓寒"
-sidebar-avatar: /img/avatar-xiaohan.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: ~/img/avatar-xiaohan.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
