--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ future: true
 RSS: false
 weibo_username:     MINO_
 zhihu_username:     Nervermind
-github_username:    Xiaohan Yang
+github_username:    Yangxiaohan0120
 twitter_username:   Xiaohan Yang
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
