--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: Xiaohan
+disqus_username: Xiaohan Yang
 
 # Netease settings
 netease_comment: false
