--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ RSS: false
 weibo_username:     MINO_
 zhihu_username:     Nervermind
 github_username:    Yangxiaohan0120
-twitter_username:   yxh02946796
+twitter_username:   Xiaohan Yang
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
