--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hux Blog",
-  "short_name": "Hux Blog",
+  "name": "Xiaohan Blog",
+  "short_name": "Xiaohan Blog",
   "description": "About an engineer & designer who loves web.",
   "icons": [{
     "src": "icons/128.png",
