--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: The Road Less Traveled
 SEOTitle: The Road Less Traveled | The Road Less Traveled
-header-img: "img/post-bg-os-metro.jpg"
+header-img: "img/Home.jpg"
 email: xiaohanyang0120@gmail.com
 description: "关于读书，音乐与电影，偶尔黑客."
 keyword: "杨晓寒, 博客, 互联网"
