--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ keyword: "杨晓寒, 博客, 互联网"
 url: "https://yangxiaohan0120.github.io/"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
+# 自定义永久链接
+permalink: /blog/:year/:month/:day/:title/
+
+
+
 # Publish posts or collection documents with a future date.
 future: true
 
@@ -71,7 +76,7 @@ netease_comment: false
 # ba_track_id: [your track id]
 
 # Google Analytics
-ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
+ga_track_id: 'G-E5XHPSL902'            # Format: UA-xxxxxx-xx
 ga_domain: yangxiaohan0120.github.io
 
 
@@ -79,7 +84,7 @@ ga_domain: yangxiaohan0120.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "杨晓寒"
-sidebar-avatar: "/img/avatar-xiaohan-ny.jpg"      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-xiaohan-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
