--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     MINO_
-zhihu_username:     Nervermind
+weibo_username:     MINO的向日葵_
+zhihu_username:     Nevermind
 github_username:    Yangxiaohan0120
 twitter_username:   yxh02946796
 #facebook_username:  huxpro
