--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ ga_domain: yangxiaohan0120.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "杨晓寒"
-sidebar-avatar: ![](https://raw.githubusercontent.com/Yangxiaohan0120/Yangxiaohan0120.github.io/main/img/avatar-xiaohan.jpg)      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://raw.githubusercontent.com/Yangxiaohan0120/Yangxiaohan0120.github.io/main/img/avatar-xiaohan.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
