--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     MINO的向日葵_
-zhihu_username:     Nevermind
-github_username:    Yangxiaohan0120
-twitter_username:   yxh02946796
+#weibo_username: MINO的向日葵_
+zhihu_username:  Nevermind
+github_username:  Yangxiaohan0120
+twitter_username:  yxh02946796
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
