--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,21 @@ netease_comment: false
 ga_track_id: 'G-EHKPJPFCKN'            # Format: UA-xxxxxx-xx
 ga_domain: yangxiaohan0120.github.io
 
+# gitalk settings
+gitalk:
+  enable: true  #启用gitalk
+  github_id:  Yangxiaohan0120 #github帐号 例：CodeHaotian
+  id: location.pathname  #此设置参照下文常见问题说明
+  repo: yangxiaohan0120.github.io  #存放评论的仓库名称
+  client_id:  27ab6265b4a2124d158c #application的id，即上文Client ID
+  client_secret: 822f5ac59aad88a6c8e2b97c0333c82c32f30577 #application的密码，即上文Client Secret
+  admin_user: Yangxiaohan0120 #页面显示联系**初始化评论 例：CodeHaotian
+  distraction_free_mode: true # Facebook-like distraction free mode
+  # Gitalk's display language depends on user's browser or system environment
+  # If you want everyone visiting your site to see a uniform language, you can set a force language value
+  # Available values: en | es-ES | fr | ru | zh-CN | zh-TW
+  language: zh-CN
+
 
 
 # Sidebar settings
